--- a/index.css
+++ b/index.css
@@ -13,3 +13,9 @@ body{
     border: 1px solid rgba(#000, .12);
     margin: 0 auto !important;
   }
+
+select{
+      border : none;
+      outline:none;
+      width: 20%;
+}
